[tool.poetry]
name = "cryptox"
version = "0.1.0"
description = "BTC conversion rate from public exchangers"
authors = ["pythoninja <pythoninja@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
